--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/scripts.js"></script>
-    <title>PAGE TITLE</title>
+    <title>Address Book</title>
   </head>
   <body>
     <div class="container">
-
+      <h1>Address Book</h1>
+      <p>You can add and delete contacts with this program!</p>
+      <form>
+        <div class="form-group">
+          <label for="firstName">First Name: </label>
+          <input id="firstName" type="text" required>
+        </div>
+        <div class="form-group">
+          <label for="lastName">Last Name: </label>
+          <input id="lastName" type="text" required>
+        </div>
+        <div class="form-group">
+          <label for="phoneNumber">Phone Number: </label>
+          <input id="phoneNumber" type="text" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Contact</button>
+        <button class="btn btn-danger">Delete</button>
+      </form>
+      <div id="result">
+        <p>Your Contacts: <span id="listOfContacts"></span></p>
+      </div>
     </div>
   </body>
 </html>
