--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
     <title>Address Book</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Address Book</h1>
-      <p>You can add and delete contacts with this program!</p>
-      <form>
-        <div class="form-group">
-          <label for="firstName">First Name: </label>
-          <input id="firstName" type="text" required>
-        </div>
-        <div class="form-group">
-          <label for="lastName">Last Name: </label>
-          <input id="lastName" type="text" required>
-        </div>
-        <div class="form-group">
-          <label for="phoneNumber">Phone Number: </label>
-          <input id="phoneNumber" type="text" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Add Contact</button>
-        <button class="btn btn-danger">Delete</button>
-      </form>
-      <div id="result">
-        <p>Your Contacts: <span id="listOfContacts"></span></p>
-      </div>
+  <h1>Address Book</h1>
+  <h2>Add a Contact:</h2>
+  <form id="new-contact">
+    <label for="new-first-name">First Name</label>
+    <input type="text" id="new-first-name">
+    <label for="new-last-name">Last Name</label>
+    <input type="text" id="new-last-name">
+    <label for="new-phone-number">Phone Number</label>
+    <input type="text" id="new-phone-number">
+    <button type="submit">Add</button>
+  </form>
+
+  <h2>Contacts:</h2>
+  <ul id="contacts">
+  </ul>
+
+  <div id="show-contact">
+    <p>First Name: <span class="first-name"></span></p>
+    <p>Last Name: <span class="last-name"></span></p>
+    <p>Phone Number: <span class="phone-number"></span></p>
+    <div id="buttons">
     </div>
-  </body>
+  </div>
+</body>
 </html>
