--- a/index.html
+++ b/index.html
@@ -26,9 +26,26 @@
           </div>
           <div class="form-group">
             <label for="new-phone-number">Phone Number</label>
-            <input type="text"  class="form-control" id="new-phone-number">
+            <input type="tel"  class="form-control" id="new-phone-number" placeholder="XXX-XXX-XXXX">
+          </div>
+          <div class="form-group" id="addressGroup">
+            <div class="showing" id="email-form">
+              <label for="new-email-address">Email Address</label>
+              <input type="email"  class="form-control" id="new-email-address">
+              <button type="button" class="btn btn-secondary toggle-address">Enter physical address instead</button>
+            </div>
+            <div class="hidden" id="physical-address-form">
+              <label for="new-street-address">Street Address</label>
+              <input type="text"  class="form-control" id="new-street-address">
+              <label for="new-state-address">State</label>
+              <input type="text" class="form-control" id="new-state-address">
+              <label for="new-zip-address">Zip Code</label>
+              <input type="text" class="form-control" id="new-zip-address">
+              <button type="button" class="btn btn-secondary toggle-address">Enter email address instead</button>
+            </div>
           </div>
           <button type="submit" class="btn-primary">Add</button>
+          <button type="reset" class="btn-danger">Reset</button>
         </form>
         <hr>
         <h2>Contacts:</h2>
@@ -40,6 +57,7 @@
           <p>First Name: <span class="first-name"></span></p>
           <p>Last Name: <span class="last-name"></span></p>
           <p>Phone Number: <span class="phone-number"></span></p>
+          <p>Address: <span class="address"></span></p>
           <div id="buttons">
           </div>
         </div>
