another practice commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- adding comments for git practice -->
-<!-- a new line of comments --><!-- new changes in branch2 -->
+<!-- a new line of new changes in branch2 -->
 !DOCTYPE html>
 <html>
   <head>
